--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -245,6 +245,7 @@ set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:7:6001::184;
 set_real_ip_from 2620:7:6001::185;
 set_real_ip_from 2620:7:6001::186;
