--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,7 +119,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -276,6 +275,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.148.3.217;
 allow 185.14.97.37;
 allow 185.153.197.227;
@@ -814,7 +814,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -1181,6 +1180,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1428,8 +1428,8 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 3.222.224.180;
 allow 35.0.127.52;
-allow 35.175.67.133;
 allow 37.1.201.144;
 allow 37.120.239.59;
 allow 37.187.5.192;
@@ -1483,7 +1483,6 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
-allow 45.33.20.42;
 allow 45.56.104.167;
 allow 45.61.184.47;
 allow 45.61.185.172;
@@ -1708,6 +1707,7 @@ allow 92.133.238.108;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
+allow 92.249.48.222;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
