--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -252,6 +253,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
+allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
@@ -638,6 +640,7 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.178;
 allow 193.218.118.181;
+allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
@@ -1407,12 +1410,14 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
+allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1545,6 +1550,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.21.212.77;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.190;
@@ -1573,7 +1579,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.163.117.210;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1701,6 +1706,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.219.236.101;
+allow 91.219.237.39;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
