--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,6 +5,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -252,6 +253,7 @@ deny 185.100.87.192;
 deny 185.100.87.250;
 deny 185.100.87.253;
 deny 185.100.87.41;
+deny 185.10.16.41;
 deny 185.106.102.102;
 deny 185.106.94.195;
 deny 185.107.70.56;
@@ -638,6 +640,7 @@ deny 193.189.100.206;
 deny 193.218.118.133;
 deny 193.218.118.178;
 deny 193.218.118.181;
+deny 193.218.118.182;
 deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.233.133.109;
@@ -1407,12 +1410,14 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
+deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
@@ -1545,6 +1550,7 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
+deny 52.21.212.77;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.103.190;
@@ -1573,7 +1579,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.163.117.210;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1701,6 +1706,7 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.57;
 deny 91.219.236.101;
+deny 91.219.237.39;
 deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
