--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -138,6 +139,7 @@ set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
+set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.73.11;
 set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
@@ -859,6 +861,7 @@ set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.38.110;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.178;
+set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
@@ -872,6 +875,7 @@ set_real_ip_from 212.95.50.77;
 set_real_ip_from 212.95.52.76;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
+set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
@@ -1051,6 +1055,7 @@ set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:7:6001::184;
 set_real_ip_from 2620:7:6001::185;
 set_real_ip_from 2620:7:6001::186;
@@ -1429,7 +1434,6 @@ set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.226.63.122;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.239.59;
@@ -1443,6 +1447,7 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 3.91.121.36;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1484,7 +1489,6 @@ set_real_ip_from 45.151.167.11;
 set_real_ip_from 45.151.167.12;
 set_real_ip_from 45.151.167.13;
 set_real_ip_from 45.15.157.177;
-set_real_ip_from 45.33.20.42;
 set_real_ip_from 45.56.104.167;
 set_real_ip_from 45.61.184.47;
 set_real_ip_from 45.61.185.172;
