--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.28.88.209;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -6,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -120,6 +120,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -818,12 +819,11 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-allow 201.23.12.101;
-allow 201.23.14.225;
 allow 201.23.16.249;
 allow 202.182.99.129;
 allow 202.61.226.98;
@@ -858,7 +858,6 @@ allow 209.141.37.94;
 allow 209.141.38.110;
 allow 209.141.46.203;
 allow 209.141.50.178;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -869,7 +868,6 @@ allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
-allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -1543,11 +1541,13 @@ allow 51.38.81.135;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
+allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.20.72.187;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.190;
