--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,6 +119,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -202,7 +203,6 @@ allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.249.57.253;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.97.114.202;
@@ -284,6 +284,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -814,6 +815,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -858,7 +860,6 @@ allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
-allow 210.223.41.251;
 allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
@@ -1422,6 +1423,7 @@ allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
+allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
 allow 37.1.201.144;
@@ -1435,6 +1437,7 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 3.83.62.231;
 allow 38.97.116.244;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1478,7 +1481,6 @@ allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.33.20.42;
-allow 45.56.104.167;
 allow 45.61.184.47;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1541,7 +1543,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1568,7 +1569,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.197.197.75;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
