--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.28.183.1;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -5,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -223,6 +223,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.30.116.115;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -285,7 +286,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -850,16 +850,19 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
 allow 207.188.141.102;
+allow 209.135.168.56;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.38.110;
 allow 209.141.46.203;
 allow 209.141.50.178;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
+allow 210.223.41.251;
 allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
@@ -903,7 +906,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.94.211.25;
@@ -927,10 +929,10 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
+allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1375,6 +1377,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:6a80:3:139::;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
@@ -1424,7 +1427,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.209.1.111;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1436,7 +1438,6 @@ allow 37.228.129.63;
 allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
-allow 37.48.70.156;
 allow 38.97.116.244;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1496,6 +1497,8 @@ allow 45.79.50.161;
 allow 45.79.66.123;
 allow 45.80.158.205;
 allow 45.80.158.27;
+allow 45.82.121.227;
+allow 45.82.121.246;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.219;
@@ -1514,7 +1517,6 @@ allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.208.187;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1745,7 +1747,6 @@ allow 95.143.193.125;
 allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
-allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.27.198.133;
