--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -49,6 +49,7 @@ set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.11.113;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.167;
+set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.1.198;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
@@ -949,6 +950,7 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
+set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1034,6 +1036,7 @@ set_real_ip_from 2605:6400:30:f763::2;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7ca::2;
+set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -1432,7 +1435,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.223.0.42;
+set_real_ip_from 34.232.195.87;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.239.59;
